# NL2SQL

./: .gitignore  AGENTS.md  README.md  START.md  pyproject.toml
data-agent/: .dockerignore  .env.example  .gitignore  README.md  docker-compose-local.yaml  docker-compose.yaml  main.py  pyproject.toml
data-agent/app/agent/: context.py  graph.py  lcel_debug.py  llm.py  progress.py  state.py  structured_output.py
data-agent/app/api/: dependencies.py
data-agent/app/clients/: embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py
data-agent/app/conf/: app_config.py  meta_config.py
data-agent/app/core/: context.py  lifespan.py  log.py  paths.py  sql_safety.py
data-agent/app/entities/: column_info.py  metric_info.py
data-agent/app/models/: column_info.py  column_metric.py  metric_info.py  table_info.py
data-agent/app/prompt/: prompt_loader.py
data-agent/app/scripts/: build_meta_knowledge.py  generate_demo_dw_data.py  generate_retail_dw_data.py
data-agent/app/services/: meta_knowledge_service.py  query_service.py
data-agent/conf/: app_config.yaml.example  meta_config.yaml
data-agent/docs/: interview-qa.md  nodes-business-notes.md
data-agent/prompts/: correct_sql.prompt  extend_keywords_for_column_recall.prompt  extend_keywords_for_metric_recall.prompt  extend_keywords_for_value_recall.prompt  filter_metric_info.prompt  filter_table_info.prompt  generate_sql.prompt  summarize_result.prompt
data-agent/tests/: test_dw_mysql_repository.py  test_extract_keywords.py  test_lcel_debug.py  test_prompt_loader.py
(+69 files in other folders)
